# prjtritium

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
beldb/: oph_159x242_b17_d3.beldb  oph_77x162_b3_d1.beldb
dbgen/: BelCommon.cpp  BelCommon.h  EFLGenerator.cpp  EFLGenerator.h  EFTGenerator.cpp  EFTGenerator.h  EFTIOGenerator.cpp  EFTIOGenerator.h  GBUFCTRLGenerator.cpp  GBUFCTRLGenerator.h  GBUFGenerator.cpp  GBUFGenerator.h  GridCell.cpp  GridCell.h  IOGenerator.cpp  IOGenerator.h  MEMGenerator.cpp  MEMGenerator.h  MULTGenerator.cpp  MULTGenerator.h  RoutingGenerator.cpp  RoutingGenerator.h  dbgen.cpp
dbgen/belgenerators/: BelCommon.cpp  BelCommon.h  EFLGenerator.cpp  EFLGenerator.h  EFTGenerator.cpp  EFTGenerator.h  EFTIOGenerator.cpp  GBUFCTRLGenerator.cpp  GBUFCTRLGenerator.h  GBUFGenerator.cpp  IOGenerator.h  MULTGenerator.cpp  MULTGenerator.h
efxdbgen/: efxdbgen.gemspec
efxdbgen/lib/OPH/: BelCommon.rb  Device_pb.rb  EFLGen.rb  OPHConsts.rb  OPHGen.rb
inc/: cista.h  device_list.inc  types.h
src/: bel.cpp  device.cpp  pip.cpp  vec2.cpp  wire.cpp
