cmake_minimum_required(VERSION 3.21)
project(prjtritium)
set(CMAKE_CXX_STANDARD 20)
add_library(tritium src/device.cpp src/bel.cpp inc/cista.h src/wire.cpp src/pip.cpp src/belpin.cpp )
add_executable(dbgen src/device.cpp src/bel.cpp inc/cista.h src/wire.cpp src/pip.cpp src/belpin.cpp dbgen/belgenerators/BelCommon.cpp dbgen/belgenerators/BelCommon.h dbgen/GridCell.cpp dbgen/GridCell.h inc/types.h dbgen/belgenerators/EFLGenerator.cpp dbgen/belgenerators/EFLGenerator.h dbgen/RoutingGenerator.cpp dbgen/RoutingGenerator.h dbgen/belgenerators/EFTGenerator.cpp dbgen/belgenerators/EFTGenerator.h dbgen/dbgen.cpp dbgen/belgenerators/IOGenerator.cpp dbgen/belgenerators/IOGenerator.h dbgen/belgenerators/EFTIOGenerator.cpp dbgen/belgenerators/EFTIOGenerator.h dbgen/belgenerators/GBUFCTRLGenerator.cpp dbgen/belgenerators/GBUFCTRLGenerator.h dbgen/belgenerators/MEMGenerator.cpp dbgen/belgenerators/MEMGenerator.h dbgen/belgenerators/MULTGenerator.cpp dbgen/belgenerators/MULTGenerator.h dbgen/belgenerators/GBUFGenerator.cpp dbgen/belgenerators/GBUFGenerator.h src/vec2.cpp)
target_include_directories(tritium PUBLIC inc)
target_include_directories(dbgen PUBLIC inc)

find_package(fmt)
target_link_libraries(tritium fmt::fmt)
target_link_libraries(dbgen fmt::fmt)
